--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
     "flowbite": "^2.3.0",
+    "jsbarcode": "^3.11.6",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
