--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "crypto": "^1.0.1",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
