--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mfactory",
-  "version": "0.0.0",
+  "version": "1.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -21,7 +21,8 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21",
+    "qrcode-vue3": "^1.7.1",
+    "vue": "^3.5.13",
     "vue-chartjs": "^5.3.1",
     "vue-json-excel3": "^1.0.24",
     "vue-router": "^4.3.0"
